# makepad-component

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_ja.md  README_zh.md
components/: Cargo.toml
components/src/: lib.rs
components/src/accordion/: accordion.rs
components/src/alert/: alert.rs
components/src/avatar/: avatar.rs
components/src/badge/: badge.rs
components/src/button/: button.rs
components/src/card/: card.rs
components/src/checkbox/: checkbox.rs
components/src/color_picker/: color_picker.rs
components/src/divider/: divider.rs
components/src/dock/: dock.rs
components/src/drawer/: drawer.rs
components/src/dropdown/: dropdown.rs
components/src/editable_list/: editable_list.rs
components/src/flexible_data_table/: flexible_data_table.rs
components/src/label/: label.rs
components/src/layout/: layout.rs
components/src/link/: link.rs
components/src/list/: list.rs
components/src/modal/: modal.rs
components/src/notification/: notification.rs
components/src/page_flip/: page_flip.rs
components/src/popover/: popover.rs
components/src/progress/: progress.rs
components/src/radio/: radio.rs
components/src/select/: select.rs
components/src/skeleton/: skeleton.rs
components/src/slider/: slider.rs
components/src/space/: space.rs
components/src/spinner/: spinner.rs
components/src/switch/: switch.rs
components/src/tab/: tab.rs
components/src/text/: text.rs
components/src/theme/: colors.rs  colors_dark.rs  mod.rs
components/src/tooltip/: tooltip.rs
crates/component-zoo/src/: app.rs
crates/ui/src/theme/: colors.rs
crates/ui/src/widgets/: alert.rs  avatar.rs  button.rs  card.rs  checkbox.rs  input.rs  list.rs  mod.rs  modal.rs  notification.rs  page_flip.rs  popover.rs  skeleton.rs  slider.rs  spinner.rs  switch.rs  tab.rs
examples/component-zoo/: Cargo.toml
examples/component-zoo/src/: app.rs  lib.rs  main.rs
