[workspace]
members = [
    "crates/ui",
    "crates/component-zoo",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
makepad-component = { path = "crates/ui" }
makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "dev" }
