[workspace]
members = [
    "examples/*",
    "components",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
makepad-components = { path = "components" }
makepad-widgets    = { git = "https://github.com/Project-Robius-China/makepad", branch = "makepad_component_used_makepad_version" }
