[package]
name        = "makepad-components"
description = "UI components for Makepad applications"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
makepad-widgets = { workspace = true }
makepad-shell   = { workspace = true }

[features]
Accordion               = []
Alert                   = []
Avatar                  = []
Badge                   = []
Button                  = []
Calendar                = []
Card                    = []
Checkbox                = []
ColorPicker             = []
Divider                 = []
Dropdown                = []
Drawer                  = []
FlexibleDataTable       = []
Input                   = []
Label                   = []
Layout                  = []
Link                    = []
List                    = []
Menu                    = []
Modal                   = ["Button"]
Notification            = []
PageFlip                = []
Popover                 = []
Progress                = []
Radio                   = []
Skeleton                = []
Slider                  = []
Spinner                 = []
Space                   = []
Switch                  = []
Tab                     = []
Text                    = []
Tooltip                 = []
Table                   = []
