[package]
name = "component-zoo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Component showcase for makepad-component"

[dependencies]
makepad-components = { workspace = true, features = [
    "Accordion",
    "Alert",
    "Avatar",
    "Badge",
    "Button",
    "Calendar",
    "Card",
    "Checkbox",
    "ColorPicker",
    "Divider",
    "Dropdown",
    "Drawer",
    "EditableList",
    "FlexibleDataTable",
    "Input",
    "Label",
    "Layout",
    "Link",
    "List",
    "Menu",
    "Modal",
    "Notification",
    "PageFlip",
    "Popover",
    "Progress",
    "Radio",
    "Select",
    "Skeleton",
    "Slider",
    "Spinner",
    "Space",
    "Switch",
    "Tab",
    "Text",
    "Tooltip",
    "Table",
    "Dock",
] }
makepad-widgets    = { workspace = true }
